--- a/.github/workflows/berlin.yml
+++ b/.github/workflows/berlin.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         set -ex
         wget 'https://api.openstreetmap.org/api/0.6/notes.json?bbox=13.051179,52.337621,13.764158,52.689878&limit=10000&closed=0' -O /tmp/notes-berlin.json
-        ./find-osm-survey-jobs.pl /tmp/notes-berlin.json > /tmp/osm-survey-jobs-berlin.bbd
+        ./find-osm-survey-jobs.pl /tmp/notes-berlin.json --url-in-name > /tmp/osm-survey-jobs-berlin.bbd
         $GITHUB_WORKSPACE/src/bbbike/miscsrc/bbd2geojson -bbbgeojsonp /tmp/osm-survey-jobs-berlin.bbd > $GITHUB_WORKSPACE/osm-survey-jobs-gh-pages/osm-survey-jobs-berlin.bbbgeojsonp
 
     - name: Prepare changes to gh-pages
