don't fail if there's nothing to be committed

--- a/.github/workflows/berlin.yml
+++ b/.github/workflows/berlin.yml
@@ -40,5 +40,5 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add osm-survey-jobs-berlin.bbbgeojsonp
-        git commit -m "automatic osm-survey-jobs-berlin.bbbgeojsonp update"
-        git push origin gh-pages
+        git commit -m "automatic osm-survey-jobs-berlin.bbbgeojsonp update" && \
+          git push origin gh-pages
