--- a/.github/workflows/build-map.yml
+++ b/.github/workflows/build-map.yml
@@ -1,5 +1,5 @@
 name: Create GitHub Pages
-run-name: Create GitHub Pages for ${{ inputs.areaname }}
+run-name: Create GitHub Pages for ${{ inputs.areaname || 'default' }}
 
 on:
   workflow_dispatch:
